Placeholder image for timeline area Made scrollbars bigger for touch interface Made resize handlers bigger for touch interface Disable user selection in web page (avoid some ugly things)

--- a/html/css/videoeditor.css
+++ b/html/css/videoeditor.css
@@ -390,4 +390,33 @@ body.custom , /* class used to trigger 'custom theme' for all elements */
 }
 
 .ui-slider-horizontal .ui-slider-handle { top: 0px; margin-left: 0px; }
+
 .ui-slider .ui-slider-range { position: absolute; font-size: .7em; display: block; border: 0; background-position: 0 0; }
+
+.ui-state-highlight { 
+    height: 85px;
+    padding:5px;
+    border:5px solid #000000;
+}
+
+::-webkit-scrollbar {
+    width: 25px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
+
+* {
+     user-select: none;
+    -khtml-user-select: none;
+    -o-user-select: none;
+    -moz-user-select: -moz-none;
+    -webkit-user-select: none;
+}
